Profile, Post , Nav done round1

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.Navigation {
+    display: flex;
+    justify-content: space-around;
+    height: 10vh;
+    background: linear-gradient(to right, #e65c00, #f9d423);
+    border-radius: 0 0 10px 10px;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+    display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a{
+    color: inherit;
+    text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav>li {
+    list-style-type: none;
+    margin : auto 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.PostContainer {
+    width : 80%;
+    background-color: bisque;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.PostContent {
+    margin: 15px 15px;
+    padding : 10px 10px;
+    height : 75%;
+    display : flex;
+    justify-content : space-between;
+    align-items: center;
+}
+
+hr {
+    width : 90% ;
+    border-top: 2px solid rgb(85, 82, 82);
+}
+
+.Credit > div{
+    margin : 0.3em 2em;
+}
+
+.pip {
+    color : rgb(190, 224, 157);
 }
